--- a/CódigoFonte/style.css
+++ b/CódigoFonte/style.css
@@ -26,8 +26,9 @@ header ul {
 
 header {
     display: flex;
-   /* background-color: #3a6485; */
-   background-color: #262324;
+    /* background-color: #3a6485; */
+    /*   background-color: #262324; */
+    background-image: linear-gradient(to top right, #262324, #a32134);
 
     height: 100px;
     width: 100%;
@@ -36,25 +37,58 @@ h1, span, li {
     color: white;  
     cursor:pointer
 }
+input {
+    border-radius: 5px;
+}
 
+/* Personalizando Select Label e Button */
+
+select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url(./src/img/Vector.jpg) no-repeat white;
+    background-position: 87% 58%;
+    border: 1px solid #333;
+    background-size: 14px 9px;
+    border-radius: 8px;
+    padding: 6px;
+    width: 110px;
+    font-weight: 600;
+}
+
+label {
+    color: white;
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
+button {
+    width: 100px;
+    border-radius: 8px;
+    padding: 4px;
+    color: whitesmoke;
+    background-color: #333;
+    font-weight: 700;
+
+}
 
 
 /* CSS MAIN */
 
 main {
       background-image: linear-gradient(to bottom right, #262324, #a32134); 
-    /* background-image: linear-gradient(180deg, red, yellow);*/
+
      height: 80vh
 }
 
-label {
-    color: white
-}
 #titulo-busca{
     color: white
 }
 
-img {
-    width:500px;
-    height: 500px
+.search-film-by-streaming {
+    display:flex;
+    display: flex;
+    gap: 4%
 }
+
