--- a/CódigoFonte/style.css
+++ b/CódigoFonte/style.css
@@ -1,7 +1,13 @@
+:root{
+    --primary-color: #a32134;
+    --secondary-color: #262324;
+    --third-color: #FFFFFF
+}
+
 *{
     margin: 0;
     padding:0;
-    box-sizing: border-box;
+    box-sizing: border-box
 }
 
 body {
@@ -28,13 +34,13 @@ header {
     display: flex;
     /* background-color: #3a6485; */
     /*   background-color: #262324; */
-    background-image: linear-gradient(to top right, #262324, #a32134);
+    background-image: linear-gradient(to top right, var(--secondary-color), var(--primary-color));
 
     height: 100px;
     width: 100%;
 }
 h1, span, li {
-    color: white;  
+    color: var(--third-color);  
     cursor:pointer
 }
 input {
@@ -47,7 +53,7 @@ select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    background: url(./src/img/Vector.jpg) no-repeat white;
+    background: url(./src/img/Vector.jpg) no-repeat var(--third-color);
     background-position: 87% 58%;
     border: 1px solid #333;
     background-size: 14px 9px;
@@ -58,7 +64,7 @@ select {
 }
 
 label {
-    color: white;
+    color: var(--third-color);
     font-weight: 600;
     font-size: 1.3rem;
 }
@@ -67,7 +73,7 @@ button {
     width: 100px;
     border-radius: 8px;
     padding: 4px;
-    color: whitesmoke;
+    color: var(--third-color);
     background-color: #333;
     font-weight: 700;
 
@@ -77,7 +83,7 @@ button {
 /* CSS MAIN */
 
 main {
-      background-image: linear-gradient(to bottom right, #262324, #a32134); 
+      background-image: linear-gradient(to bottom right, var(--secondary-color), var(--primary-color)); 
 
      height: 80vh
 }
