--- a/CódigoFonte/banner.css
+++ b/CódigoFonte/banner.css
@@ -3,18 +3,23 @@
   background-color: var(--color-body);
 }
 
+#img-active {
+  display:block
+}
+
 /* Slideshow container */
 .slideshow-container {
   max-width: auto;
   position: relative;
   margin: auto;
-  /* display: none; */
+  /*display: none; */
 }
 
 /* Hide the images by default */
 .mySlides {
   width: 100%;
   height: 450px;
+  display: none
 }
 
 /* Next & previous buttons */
