alinhando textos e ajustando main

--- a/codigoFonte/style.css
+++ b/codigoFonte/style.css
@@ -3,6 +3,14 @@
     --secondary-color: #262324;
     --third-color: #FFFFFF
 }
+h1 {
+    text-align: center;
+    margin: 7%
+}
+
+h2 {
+    margin-bottom: 7%;
+}
 
 *{
     margin: 0;
@@ -85,7 +93,7 @@ button {
 main {
       background-image: linear-gradient(to bottom right, var(--secondary-color), var(--primary-color)); 
 
-     height: 80vh
+     height: 100%
 }
 
 #titulo-busca{
