--- a/codigoFonte/css/style.css
+++ b/codigoFonte/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 /* CSS HEADER */
 
-header ul li {
+header > ul > li {
     display: flex;
     gap: 5px;
     font-weight: 600;
@@ -54,15 +54,15 @@ input {
 }
 
 
-span#burguer {
-    display: block;
+#burguer {
+    display: none;
     color: white;
     text-align: left;
     cursor: pointer;
     height: 28px;
-    margin:
 }
-#itens ul {
+
+#menu-mobile ul {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -71,10 +71,18 @@ span#burguer {
     gap: 7px
 }
 
-
-menu {
-    display:block
+#menu-mobile {
+    display:none;
+    position: absolute;
+    top: 65px;
+    right: 3%;
 }
+#menu-mobile ul li {
+    gap: 10px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
 
 
 
@@ -128,4 +136,22 @@ main {
 .search-film-by-streaming {
     display: flex;
     gap: 4%
+}
+/* Menu Mobile */
+
+@media (max-width: 600px){
+
+    header > ul > li {
+        display: none;
+
+    }
+    #logo{
+        display:block
+    }
+    #burguer {
+        display: block;
+
+    }
+    
+
 }
