--- a/codigoFonte/css/style.css
+++ b/codigoFonte/css/style.css
@@ -60,6 +60,7 @@ input {
     text-align: left;
     cursor: pointer;
     height: 28px;
+    user-select: none;
 }
 
 #menu-mobile ul {
@@ -68,7 +69,7 @@ input {
     align-items: flex-start;
     align-content: center;
     justify-content: center;
-    gap: 7px
+    gap: 7px;
 }
 
 #menu-mobile {
@@ -81,6 +82,7 @@ input {
     gap: 10px;
     font-weight: 600;
     font-size: 18px;
+    user-select: none;
 }
 
 
