--- a/codigoFonte/css/style.css
+++ b/codigoFonte/css/style.css
@@ -157,3 +157,9 @@ main {
     
 
 }
+
+footer {
+    display: flex;
+    background-image: linear-gradient(to top right, var(--secondary-color), var(--primary-color));
+    justify-content: center;
+}
