--- a/codigoFonte/css/banner.css
+++ b/codigoFonte/css/banner.css
@@ -6,12 +6,13 @@
   position: absolute;
   z-index: 10;
   left: 50%;
-  top: 85%;
+  top: 53%;
   
 }
 
 #img-active {
-  display:block
+  display:block;
+  height: 450px
 }
 
 /* Slideshow container */
@@ -110,7 +111,7 @@
 
 .images{
   width: 100%;
-  height: 100%;
+  height: 450px;
   object-fit: cover;
 }
 
