--- a/codigoFonte/css/iframe.css
+++ b/codigoFonte/css/iframe.css
@@ -11,9 +11,9 @@
   height: 300px
 }
 
-#iframe-container {
+.trailer-modal {
   position: fixed;
-  z-index: 50;
+  z-index: 200;
   top: 0;
   left: 0;
   right: 0;
@@ -24,7 +24,7 @@
 }
 
 .card img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   margin-bottom: 10px;
 }
