--- a/codigoFonte/css/iframe.css
+++ b/codigoFonte/css/iframe.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #ccc;
+  border: 1px solid whitesmoke;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   margin: 20px;
   padding: 20px;
   width: 300px;
-  height: 300px
+  height: 300px;
+  background-color: #1a1818;
 }
 
 .trailer-modal {
@@ -27,6 +28,8 @@
   width: 100%;
   height: auto;
   margin-bottom: 10px;
+  border-radius: 6px;
+
 }
 
 .info {
@@ -34,21 +37,27 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  font-weight: 500
 }
 
 .info h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+    font-size: 24px;
+    color: whitesmoke;
+    margin-bottom: 10px;
 }
 
 .info p {
   font-size: 16px;
   margin-bottom: 20px;
+  color: whitesmoke;
+  font-weight: 500;
+  letter-spacing: 1px;
+
 }
 
 .trailer-button {
   padding: 10px 20px;
-  background-color: #3498db;
+  background-color: #225577;
   color: #fff;
   border: none;
   border-radius: 5px;
