--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,11 +5,11 @@
 
 }
 #title-cine{
-    color:white
+    color:white;
 }
 h1 {
     text-align: center;
-    margin: 0%
+    margin: 3%
 }
 
 h2 {
@@ -62,7 +62,7 @@ input {
 
 #burguer {
     display: none;
-    color: white;
+    color:white;
     text-align: left;
     cursor: pointer;
     height: 28px;
@@ -80,7 +80,7 @@ input {
     top: 65px;
     border-radius: 10px;
     opacity: 0.9;
-    background-color: #691414;
+    background-color:white;
     right: 3%;
     padding: 11px;
 }
@@ -110,7 +110,7 @@ select {
     -moz-appearance: none;
     background: url(../src/img/Vector.jpg) no-repeat var(--third-color);
     background-position: 87% 58%;
-    border: 1px solid #333;
+    border: 1px solid white;
     background-size: 14px 9px;
     border-radius: 8px;
     padding: 6px;
@@ -174,6 +174,6 @@ main {
 
 footer {
     display: flex;
-    background-image: linear-gradient(to top right, var(--secondary-color), var(--primary-color));
+    background-color: #333;
     justify-content: center;
 }
