Ajuste class Banner

--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -35,7 +35,8 @@
 .mySlides {
   width: 100%;
   height: 450px;
-  display: none
+  display: none;
+  margin-top: -85px
 }
 
 /* Next & previous buttons */
@@ -112,7 +113,7 @@
 }
 
 /* Fading animation */
-.fade {
+.fades {
   animation-name: fade;
   animation-duration: 1.5s;
 }
