--- a/src/css/iframe.css
+++ b/src/css/iframe.css
@@ -9,7 +9,7 @@
   padding: 20px;
   width: 300px;
   height: 300px;
-  background-color: #1a1818;
+  background-color: #1a1818 !important;
   
 }
 
@@ -23,6 +23,9 @@
   width: 600px;
   height: 400px;
   margin: auto;
+}
+.modal-content {
+  background-color: none !important
 }
 
 .card img {
