--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -14,13 +14,8 @@
 #cinema-button {
   position: relative;
   z-index: 10;
-<<<<<<< HEAD
   left: 46%;
   top: 88%;
-=======
-  left: 47%;
-  top: 82%;
->>>>>>> sprint3
 }
 
 #img-active {
@@ -95,15 +90,11 @@
 .dot {
   cursor: pointer;
   height: 15px;
-<<<<<<< HEAD
   width: 13px;
   margin: 1px;
-  background-color: #FFBB00;
-=======
   width: 15px;
   margin: 0 2px;
   background-color: var(--primary-color);
->>>>>>> sprint3
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -114,7 +105,8 @@
   position: relative;
   bottom: 10px;
   text-align: center;
-  user-select: none
+  top: 37px;
+  user-select: none;
 }
 
  .dot:hover {
