--- a/src/css/iframe.css
+++ b/src/css/iframe.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid whitesmoke;
+  border: 2px solid whitesmoke !important;
   border-radius: 5px;
   box-shadow: 5px 4px 4px 4px rgba(0, 0, 0, 0.5);
   margin: 20px;
@@ -30,7 +30,7 @@
 
 .card img {
   width: 100%;
-  height: auto;
+  height: 100%;
   margin-bottom: 10px;
   border-radius: 6px;
 
