Ajuste Margem de titulos

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,9 @@
     color:white;
     margin:3%;
 }
+#tittle-cine{
+    margin: 3% 0 7% 0
+}
 #launch-title{
     color: white;
     margin: 9% 0 3%;
