--- a/src/css/movie-cards.css
+++ b/src/css/movie-cards.css
@@ -24,3 +24,23 @@
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
+.accordion-item {
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+  }
+  
+  .accordion-header {
+    background-color: #f1f1f1;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .accordion-content {
+    padding: 10px;
+    display: none;
+  }
+  
+  .active {
+    display: block;
+  }
