--- a/src/css/movie-cards.css
+++ b/src/css/movie-cards.css
@@ -3,7 +3,7 @@
 }
 
 .movie-card {
-    width:300px;
+    width:360px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,11 +16,11 @@
     display: flex;
     width: 50%;
     justify-content: space-around;
-    align-items: center;
 }
 .films-cards-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    flex-wrap: wrap;
+    gap:20px;    
+    flex-wrap: wrap
 }
