--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -1,5 +1,8 @@
-* {box-sizing:border-box}
-:root{
+* {
+  box-sizing: border-box
+}
+
+:root {
   --primary-color: #a32134;
   --secondary-color: #262324;
   --third-color: #FFFFFF;
@@ -8,9 +11,10 @@
 
 
 
-.banner{
+.banner {
   background-color: var(--body-color);
 }
+
 #cinema-button {
   position: relative;
   z-index: 10;
@@ -19,7 +23,7 @@
 }
 
 #img-active {
-  display:block;
+  display: block;
   height: 450px
 }
 
@@ -40,10 +44,11 @@
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
-  top: 33%;
+  top: 5%;
   width: auto;
   margin-top: 250px;
   padding: 16px;
@@ -62,8 +67,9 @@
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -101,7 +107,7 @@
   user-select: none
 }
 
-.dots{
+.dots {
   position: relative;
   bottom: 10px;
   text-align: center;
@@ -109,7 +115,7 @@
   user-select: none;
 }
 
- .dot:hover {
+.dot:hover {
   background-color: whitesmoke;
   transform: scale(1.1);
 
@@ -121,72 +127,85 @@
   animation-duration: 1.5s;
 }
 
-.images{
+.images {
   width: 100%;
   height: 450px;
   object-fit: cover;
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
   .slideshow-container {
     max-width: 100%;
     height: 100%;
     /* display: none; */
   }
+
   .mySlides {
     height: 100%;
   }
 
-  .prev, .next {
+  .prev,
+  .next {
     background-color: black;
   }
+
   .text {
     font-size: 12px;
   }
+
   .numbertext {
     font-size: 10px;
   }
+
   .dot {
     height: 10px;
     width: 10px;
   }
-  .dots{
+
+  .dots {
     bottom: 5px;
   }
-  .prev:hover, 
-  .next:hover{
-    background-color: rgba(0,0,0,0.8);
+
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
   }
+
   #cinema-button {
     position: relative;
     z-index: 10;
     left: 46%;
     top: 395px;
-}
+  }
 
-.slider {
-  display: block;
-  height: 293px;
-  width: 600px;
-  margin: auto;
-  margin-top: 20px;
-  position: relative;
-}
+  .slider {
+    display: block;
+    height: 293px;
+    width: 600px;
+    margin: auto;
+    margin-top: 20px;
+    position: relative;
+  }
 
-.slider li {
-  list-style: none;
-  position: absolute;
-}
+  .slider li {
+    list-style: none;
+    position: absolute;
+  }
 
-.slider img {
-  margin: auto;
-  height: 100%;
-  width: 100%;
-  vertical-align: top;
-}
+  .slider img {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    vertical-align: top;
+  }
