--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,7 +114,7 @@ select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    background: url(../src/img/Vector.jpg) no-repeat var(--third-color);
+    background: url(../img/Vector.jpg) no-repeat var(--third-color);
     background-position: 87% 58%;
     border: 1px solid white;
     background-size: 14px 9px;
