Ajusta o footer, ajusta componentes nas páginas

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,23 +8,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
-}
-
-html,
-body {
-    height: 100%;
-    margin: 0;
-}
-
-body {
+    letter-spacing: 1px;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+}
+
+body {
     background-color: var(--body-color) !important;
 }
 
 #title {
     color: var(--third-color);
     margin: 3%;
+    font-weight: bold;
 }
 
 #tittle-cine {
@@ -34,23 +30,22 @@ body {
 #launch-title {
     color: var(--third-color);
     margin: 9% 0 3%;
+    font-weight: bold;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
     text-align: center;
-}
-
-a {
-    color: var(--third-color) !important;
+    margin: 0px;
+    color: var(--third-color);
+    font-weight: bold;
 }
 
 /* ------------------------------------------------------ */
 /* Header: Estilização e Dimensionamento e Posicionamento */
 /* ------------------------------------------------------ */
 
-/* Estilos Comuns ao Header e ao Footer */
-header,
-footer {
+/* Estilos do Header */
+header {
     background: rgba(14, 13, 13, 0.952);
     backdrop-filter: blur(10px);
     box-shadow: 3px 5px 3px 3px rgba(0, 0, 0, 0.2);
@@ -63,6 +58,10 @@ header {
     width: 100%;
 }
 
+header a {
+    color: var(--third-color) !important;
+}
+
 header>ul>li {
     display: flex;
     gap: 5px;
@@ -70,19 +69,19 @@ header>ul>li {
 }
 
 header ul {
-    /*
+ 
     display: flex;
     align-items: center;
     justify-content: space-around;
     list-style: none;
     width: 100%;
-*/
+   /*
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 0;
-
+*/
 }
 
 span,
@@ -172,7 +171,7 @@ button {
 /* Main: Estilização e Dimensionamento e Posicionamento */
 /* ------------------------------------------------------ */
 
-main {
+main, #loginModal #signupModal {
     /*background-image: linear-gradient(to bottom right, var(--secondary-color), var(--primary-color));*/
     background-color: var(--body-color);
     height: 100%
@@ -187,123 +186,107 @@ main {
 /* Footer: Posicionamento, Dimensionamento e Estilização*/
 /* ---------------------------------------------------- */
 
+/* Estilos do Footer */
+
 footer {
-    /* Posicionamento*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    background: rgba(14, 13, 13, 0.952);
+    backdrop-filter: blur(10px);
+    box-shadow: 3px 5px 3px 3px rgba(0, 0, 0, 0.2);
 
-    /* Dimensionamento*/
-    height: 100px;
-    width: 100%;
-}
-
-footer p {
-    text-align: center; /* Centraliza o conteúdo horizontalmente */
-}
-
-img.social-logo {
-    /* Posicionamento */
-    display: inline-block; /* Exibe as imgs em linha */
-    margin: 0 5px; /* Centraliza as imgs horizontalmente */
-
-    /* Estilização */
-    filter: invert(100%);
-  }
-  
-
-/*
-
-.main-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.main-footer p {
     color: var(--third-color);
-    margin-right: 10px;
+    width: 100%;
+    flex-shrink: 0;
 }
 
-.main-footer ul {
-   
-    display: flex;
-    align-items: center;
-   
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
+.footer-link {
+    text-decoration: none;
+} 
 
-
-
-.social-logo {
-    margin-right: 10px;
-    filter: invert(100%);
-}
-*/
-
-/*
-footer {
-    display: flex;
-    justify-content: center;
-    color: #FFFFFF;
-}
-
-/*
-.main-footer {
-    display: flex;
-    justify-content: center;
-    color: #FFFFFF;
-}
-*/
-
-/*
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-.wrapper {
+#footer-content {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
+    align-items: center; 
+    justify-content: center; 
 }
 
-.main {
-    flex: 1;
+#footer-copyright {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center; 
+    justify-content: center; 
 }
 
-.main-footer {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
+#footer-contacts h3 {
+    margin-bottom: 0.75rem;
+    font-weight: bold;
+}
+
+#footer-social-media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+}
+
+#footer-social-media .footer-link {
+    display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--third-color);
+    border-radius: 50%;
 }
 
-.main-footer p {
-    flex-basis: 100%;
-    margin-bottom: 10px;
-    color: var(--third-color); var(--body-color);
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
 }
 
-.main-footer img {
+#facebook {
+    background: linear-gradient(#4267b3, #299BF1);
+}
+
+#twitter {
+    background: linear-gradient(#1D9BF0, #76C5F5);
+}
+
+#linkedin {
+    background: linear-gradient(#0077B5, #0077B5);
+}
+
+/*
+footer p {
+    color: var(--third-color);
+}
+
+.page-footer {
+    flex-shrink: 0;
+}
+
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image-container img {
     margin-right: 10px;
     filter: invert(100%);
 }
-*/
-/*
-.social-logo {
-    filter: invert(100%); 
+
+.footer-content {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 */
-
 
 /* ------------ */
 /* Menu Mobile */
