--- a/src/css/movie-cards.css
+++ b/src/css/movie-cards.css
@@ -14,16 +14,20 @@
 
 
 .movie-card {
-    width:360px;
+    width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    border: 2px solid #ccc;
+    box-shadow: 5px 4px 4px 4px rgba(0, 0, 0, 0.5);
+    background-color: #1a1818;
     padding: 10px;
+    border-radius: 7px;
+    border: 2px solid whitesmoke;
     margin-bottom: 10px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4)
+
 }
+
 .note-favorite {
     display: flex;
     width: 50%;
