Adiciona efeito para hover no footer e ajusta o footer-copyright

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,7 +242,17 @@ footer {
     width: 2.5rem;
     color: var(--third-color);
     border-radius: 50%;
+    transition: all 0.4s;
 }
+
+#footer-social-media .footer-link i {
+    font-size: 1.5rem;
+}
+
+#footer-social-media .footer-link:hover {
+    opacity: 0.8;
+
+} 
 
 #instagram {
     background: linear-gradient(#7f37c9, #ff2992, #ff9807);
@@ -260,6 +270,15 @@ footer {
     background: linear-gradient(#0077B5, #0077B5);
 }
 
+#footer-copyright {
+    display: flex;
+    justify-content: center;
+    /*background-color: var(--secondary-color);*/
+    font-size: 0.9rem;
+    padding: 0.25rem;
+    font-weight: 100;
+
+}
 
 /* ------------ */
 /* Menu Mobile */
