--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,10 @@ body {
     font-weight: bold;
 }
 
+#text-favorite {
+    color:whitesmoke;
+    text-align: justify
+}
 #tittle-cine {
     margin: 3% 0 7% 0
 }
@@ -179,7 +183,8 @@ button {
 main, #loginModal #signupModal {
     /*background-image: linear-gradient(to bottom right, var(--secondary-color), var(--primary-color));*/
     background-color: var(--body-color);
-    height: 100%
+    height: 100%;
+    min-height: 309px
 }
 
 .search-film-by-streaming {
