Criação da página de busca

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -312,3 +312,10 @@ footer {
         display: block;
     }
 }
+
+#wrapper-search {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
