Linkando as páginas no responsivo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -314,6 +314,7 @@ footer {
 }
 
 #wrapper-search {
+    margin-top: 25px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
