--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,6 +41,10 @@ body {
     font-weight: bold;
 }
 
+div h3 {
+    color:#FFFFFF;
+    text-align: justify;
+}
 h1, h2, h3, h4, h5 {
     text-align: center;
     margin: 0px;
