--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,14 +61,20 @@ header {
     background: rgba(14, 13, 13, 0.952);
     backdrop-filter: blur(10px);
     box-shadow: 3px 5px 3px 3px rgba(0, 0, 0, 0.2);
-}
-
-/* Dimensões e posicionamento do Header */
-header {
     display: flex;
     height: 100px;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    transition: all 0.4s ease-in-out; /* Transição suave */
+    z-index: 999; /* Garante que o header esteja na frente de outros elementos */
 }
+
+
+
 
 header a {
     color: var(--third-color) ;
@@ -194,7 +200,8 @@ main, #loginModal #signupModal {
     /*background-image: linear-gradient(to bottom right, var(--secondary-color), var(--primary-color));*/
     background-color: var(--body-color);
     height: 100%;
-    min-height: 472px
+    min-height: 480px;
+    padding-top: 100px;
 }
 
 .search-film-by-streaming {
@@ -329,3 +336,7 @@ footer {
     flex-wrap: wrap;
     flex-direction: column;
 }
+/* Efeito Header */
+header.scroll {
+    background-color: rgba(0, 0, 0, 0.70); /* Cor de fundo transparente com transparência de 80% */
+  }
