Ajuste barra de busca na página

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -329,6 +329,7 @@ footer {
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 115px;
 }
 .actor-container{
     display: flex;
